Added another project for service runs. Modified gradle scripts

--- a/gw_service/build.gradle
+++ b/gw_service/build.gradle
@@ -9,5 +9,6 @@ repositories {
 }
 
 dependencies {
-	compile project(':common')
+    compile project(':common')
+    compile project(':json_generator')
 }
